crates/ir/tests/snapshots/lower_test__traits__op_sub_syntax.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__op_sub_syntax

struct Vec2 { x: Int, y: Int }
instance core/sub.Sub[Vec2] { sub=Sub$$Vec2$$sub }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v0: ~Vec2 = construct Vec2(5, 3)
  let v1: ~Vec2 = construct Vec2(3, 1)
  let_join v12(v10: Int) =
    let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v11: Unit = call println(v2, v10)
    v11
  in
  let_join v9(v7: Vec2) =
    let v8: Int = project v7.0
    jump v12(v8)
  in
  let v5: Dict[core/sub.Sub, Vec2] = get_dict core/sub.Sub[Vec2]
  let v6: Vec2 = trait_call core/sub.Sub.sub(v5, v0, v1)
  jump v9(v6)

fn Sub$$Vec2$$sub(v13: Vec2, v14: Vec2) -> ~Vec2 =
  let v15: Int = project v13.0
  let v16: Int = project v14.0
  let v17: Int = sub_int(v15, v16)
  let v18: Int = project v13.1
  let v19: Int = project v14.1
  let v20: Int = sub_int(v18, v19)
  let v21: ~Vec2 = construct Vec2(v17, v20)
  v21
