crates/ir/tests/snapshots/lower_test__traits__superclass_chain.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__superclass_chain

struct Num { n: Int }
instance core/eq.Eq[Num] { eq=Eq$$Num$$eq }
instance core/ord.Ord[Num] { lt=Ord$$Num$$lt }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn is_less(v0: Dict[core/ord.Ord, o8], v1: o8, v2: o8) -> Bool =
  let v3: Bool = trait_call core/ord.Ord.lt(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: ~Num = construct Num(1)
  let v6: ~Num = construct Num(2)
  let v7: Dict[core/ord.Ord, Num] = get_dict core/ord.Ord[Num]
  let v8: Bool = call is_less(v7, v5, v6)
  let v4: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v9: Unit = call println(v4, v8)
  v9

fn Eq$$Num$$eq(v10: Num, v11: Num) -> Bool =
  let v12: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v13: Int = project v10.0
  let v14: Int = project v11.0
  let v15: Bool = trait_call core/eq.Eq.eq(v12, v13, v14)
  v15

fn Ord$$Num$$lt(v16: Num, v17: Num) -> Bool =
  let v18: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v19: Int = project v16.0
  let v20: Int = project v17.0
  let v21: Bool = trait_call core/ord.Ord.lt(v18, v19, v20)
  v21
